--- a/error.html
+++ b/error.html
@@ -9,7 +9,7 @@
 <body>
     <div class="error-screen">
         <h1>Error 69</h1>
-        <p>Wrong answer.</p>
+        <p>Zła odpowiedź.</p>
     </div>
 </body>
 </html>
