--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Will you be my Valentine?</h1>
+        <h1>Juleczko zostaniesz moją walentynką??</h1>
         <div class="buttons">
             <button id="yesButton" class="yes">Yes</button>
             <button id="noButton" class="no">No</button>
         </div>
         <div id="countdownContainer" class="hidden">
-            <p>Good answer!</p>
+            <p>Poprawna odpowiedź :)</p>
             <p id="countdown"></p>
         </div>
     </div>
