--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walentynki</title>
+    <title>Valentine's Day</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="index">
     <div class="container">
         <h1>Juleczko zostaniesz moją walentynką??</h1>
         <div class="buttons">
@@ -18,7 +18,6 @@
             <p id="countdown"></p>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
