--- a/error.html
+++ b/error.html
@@ -6,7 +6,7 @@
     <title>Error 69</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="error">
     <div class="error-screen">
         <h1>Error 69</h1>
         <p>Zła odpowiedź.</p>
