--- a/walentynki.html
+++ b/walentynki.html
@@ -3,19 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Valentine's Day!</title>
+    <title>Walentynki</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="index">
     <div class="container">
-        <h1>Walentynki!</h1>
-        <p>Kocham cię Julcia</p>
+        <h1>Witaj na Walentynkach!</h1>
         <div class="hearts">
             <div class="heart"></div>
             <div class="heart"></div>
             <div class="heart"></div>
         </div>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
