--- a/error.html
+++ b/error.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error 69</title>
+    <title>Error</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="error">
     <div class="error-screen">
-        <h1>Error 69</h1>
-        <p>Zła odpowiedź.</p>
+        <h1>Oops! You chose the wrong answer.</h1>
+        <p>But don't worry, there's always next year! 💔</p>
     </div>
 </body>
 </html>
