--- a/error.html
+++ b/error.html
@@ -8,8 +8,8 @@
 </head>
 <body class="error">
     <div class="error-screen">
-        <h1>Oops! You chose the wrong answer.</h1>
-        <p>But don't worry, there's always next year! 💔</p>
+        <h1>Zła odpowiedź.</h1>
+        <p>Jak mogłaś... 💔</p>
     </div>
 </body>
 </html>
