--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="container">
         <h1>Juleczko zostaniesz moją walentynką??</h1>
         <div class="buttons">
-            <button id="yesButton" class="yes">Yes</button>
-            <button id="noButton" class="no">No</button>
+            <button id="yesButton" class="yes">Tak</button>
+            <button id="noButton" class="no">Nie</button>
         </div>
         <div id="countdownContainer" class="hidden">
             <p>Poprawna odpowiedź :)</p>
