--- a/walentynki.html
+++ b/walentynki.html
@@ -8,7 +8,8 @@
 </head>
 <body class="index">
     <div class="container">
-        <h1>Witaj na Walentynkach!</h1>
+        <h1>Walentynki!</h1>
+        <p>Kocham cie Julcia <3</p>
         <div class="hearts">
             <div class="heart"></div>
             <div class="heart"></div>
